tests/negative/typecheck/immutable_misc.orng
// immutable_misc.orng:6:6: error: not an l-value
//     0[0] = 4
//     ^
// 
fn main() -> Int {
    0[0] = 4
    0
}